fix header paddings and some visibility

--- a/style.css
+++ b/style.css
@@ -13,15 +13,20 @@ body {
 }
 
 .header {
-  padding: 10px;
+  padding: 10px 0;
   border-bottom: 3px solid #aeaeae;
+}
+
+.header__nav,
+.subheader {
+  padding: 0 15px;
 }
 
 .header__nav,
 .subheader {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .header__projects,
@@ -39,7 +44,7 @@ body {
 
 .time__block {
   align-items: center;
-  padding: 0 5px;
+  padding-left: 5px;
 }
 
 .time__today,
